--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ docutils==0.20.1
 future==0.18.3
 greenlet==2.0.2
 grpcio==1.56.2
-grpcio-tools==1.56.2
+protobuf==3.20.1
+grpcio-tools
 idna==3.4
 importlib-metadata==6.8.0
 keyring==24.2.0
