--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ future==0.18.3
 greenlet==2.0.2
 grpcio==1.56.2
 protobuf==3.20.1
-grpcio-tools
+grpcio-tools<1.56.2
 idna==3.4
 importlib-metadata==6.8.0
 keyring==24.2.0
